moslib/dsl/antlrgen/mosdsl_parser.go

package antlrgen // MosDSLParser
import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type MosDSLParser struct {
	*antlr.BaseParser
}

var MosDSLParserParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func mosdslparserParserInit() {
  staticData := &MosDSLParserParserStaticData
  staticData.LiteralNames = []string{
    "", "", "", "", "'feature'", "'background'", "'scenario'", "'given'", 
    "'when'", "'then'", "'group'", "'spec'", "'include'", "'true'", "'false'", 
    "'{'", "'}'", "'['", "']'", "'='", "','",
  }
  staticData.SymbolicNames = []string{
    "", "GIVEN_OPEN", "WHEN_OPEN", "THEN_OPEN", "FEATURE", "BACKGROUND", 
    "SCENARIO", "GIVEN", "WHEN", "THEN", "GROUP", "SPEC", "INCLUDE", "TRUE", 
    "FALSE", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "EQUALS", "COMMA", 
    "TRIPLE_STRING", "STRING", "DATETIME", "FLOAT", "INT", "IDENT", "COMMENT", 
    "WS", "NL", "STEP_RBRACE", "STEP_TEXT", "STEP_NL",
  }
  staticData.RuleNames = []string{
    "file", "artifact", "artifactType", "block", "blockItem", "field", "key", 
    "value", "boolean", "list", "inlineTable", "nestedBlock", "blockName", 
    "specBlock", "includeDir", "featureBlock", "backgroundBlock", "groupBlock", 
    "scenarioBlock", "scenarioContent", "givenBlock", "whenBlock", "thenBlock", 
    "stepLine",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// MosDSLParserInit initializes any static state used to implement MosDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMosDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MosDSLParserInit() {
  staticData := &MosDSLParserParserStaticData
  staticData.once.Do(mosdslparserParserInit)
}

// NewMosDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMosDSLParser(input antlr.TokenStream) *MosDSLParser {
	MosDSLParserInit()
	this := new(MosDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &MosDSLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MosDSLParser.g4"

	return this
}


// MosDSLParser tokens.
const (
	MosDSLParserEOF = antlr.TokenEOF
	MosDSLParserGIVEN_OPEN = 1
	MosDSLParserWHEN_OPEN = 2
	MosDSLParserTHEN_OPEN = 3
	MosDSLParserFEATURE = 4
	MosDSLParserBACKGROUND = 5
	MosDSLParserSCENARIO = 6
	MosDSLParserGIVEN = 7
	MosDSLParserWHEN = 8
	MosDSLParserTHEN = 9
	MosDSLParserGROUP = 10
	MosDSLParserSPEC = 11
	MosDSLParserINCLUDE = 12
	MosDSLParserTRUE = 13
	MosDSLParserFALSE = 14
	MosDSLParserLBRACE = 15
	MosDSLParserRBRACE = 16
	MosDSLParserLBRACKET = 17
	MosDSLParserRBRACKET = 18
	MosDSLParserEQUALS = 19
	MosDSLParserCOMMA = 20
	MosDSLParserTRIPLE_STRING = 21
	MosDSLParserSTRING = 22
	MosDSLParserDATETIME = 23
	MosDSLParserFLOAT = 24
	MosDSLParserINT = 25
	MosDSLParserIDENT = 26
	MosDSLParserCOMMENT = 27
	MosDSLParserWS = 28
	MosDSLParserNL = 29
	MosDSLParserSTEP_RBRACE = 30
	MosDSLParserSTEP_TEXT = 31
	MosDSLParserSTEP_NL = 32
)

// MosDSLParser rules.
const (
	MosDSLParserRULE_file = 0
	MosDSLParserRULE_artifact = 1
	MosDSLParserRULE_artifactType = 2
	MosDSLParserRULE_block = 3
	MosDSLParserRULE_blockItem = 4
	MosDSLParserRULE_field = 5
	MosDSLParserRULE_key = 6
	MosDSLParserRULE_value = 7
	MosDSLParserRULE_boolean = 8
	MosDSLParserRULE_list = 9
	MosDSLParserRULE_inlineTable = 10
	MosDSLParserRULE_nestedBlock = 11
	MosDSLParserRULE_blockName = 12
	MosDSLParserRULE_specBlock = 13
	MosDSLParserRULE_includeDir = 14
	MosDSLParserRULE_featureBlock = 15
	MosDSLParserRULE_backgroundBlock = 16
	MosDSLParserRULE_groupBlock = 17
	MosDSLParserRULE_scenarioBlock = 18
	MosDSLParserRULE_scenarioContent = 19
	MosDSLParserRULE_givenBlock = 20
	MosDSLParserRULE_whenBlock = 21
	MosDSLParserRULE_thenBlock = 22
	MosDSLParserRULE_stepLine = 23
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Artifact() IArtifactContext
	EOF() antlr.TerminalNode

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_file
	return p
}

func InitEmptyFileContext(p *FileContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_file
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) Artifact() IArtifactContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArtifactContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArtifactContext)
}

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(MosDSLParserEOF, 0)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitFile(s)
	}
}




func (p *MosDSLParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MosDSLParserRULE_file)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Artifact()
	}
	{
		p.SetState(49)
		p.Match(MosDSLParserEOF)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IArtifactContext is an interface to support dynamic dispatch.
type IArtifactContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ArtifactType() IArtifactTypeContext
	Block() IBlockContext
	STRING() antlr.TerminalNode

	// IsArtifactContext differentiates from other interfaces.
	IsArtifactContext()
}

type ArtifactContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArtifactContext() *ArtifactContext {
	var p = new(ArtifactContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_artifact
	return p
}

func InitEmptyArtifactContext(p *ArtifactContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_artifact
}

func (*ArtifactContext) IsArtifactContext() {}

func NewArtifactContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArtifactContext {
	var p = new(ArtifactContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_artifact

	return p
}

func (s *ArtifactContext) GetParser() antlr.Parser { return s.parser }

func (s *ArtifactContext) ArtifactType() IArtifactTypeContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArtifactTypeContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArtifactTypeContext)
}

func (s *ArtifactContext) Block() IBlockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ArtifactContext) STRING() antlr.TerminalNode {
	return s.GetToken(MosDSLParserSTRING, 0)
}

func (s *ArtifactContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArtifactContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ArtifactContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterArtifact(s)
	}
}

func (s *ArtifactContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitArtifact(s)
	}
}




func (p *MosDSLParser) Artifact() (localctx IArtifactContext) {
	localctx = NewArtifactContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MosDSLParserRULE_artifact)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.ArtifactType()
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == MosDSLParserSTRING {
		{
			p.SetState(52)
			p.Match(MosDSLParserSTRING)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}
	{
		p.SetState(55)
		p.Block()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IArtifactTypeContext is an interface to support dynamic dispatch.
type IArtifactTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENT() antlr.TerminalNode
	FEATURE() antlr.TerminalNode

	// IsArtifactTypeContext differentiates from other interfaces.
	IsArtifactTypeContext()
}

type ArtifactTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArtifactTypeContext() *ArtifactTypeContext {
	var p = new(ArtifactTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_artifactType
	return p
}

func InitEmptyArtifactTypeContext(p *ArtifactTypeContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_artifactType
}

func (*ArtifactTypeContext) IsArtifactTypeContext() {}

func NewArtifactTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArtifactTypeContext {
	var p = new(ArtifactTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_artifactType

	return p
}

func (s *ArtifactTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *ArtifactTypeContext) IDENT() antlr.TerminalNode {
	return s.GetToken(MosDSLParserIDENT, 0)
}

func (s *ArtifactTypeContext) FEATURE() antlr.TerminalNode {
	return s.GetToken(MosDSLParserFEATURE, 0)
}

func (s *ArtifactTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArtifactTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ArtifactTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterArtifactType(s)
	}
}

func (s *ArtifactTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitArtifactType(s)
	}
}




func (p *MosDSLParser) ArtifactType() (localctx IArtifactTypeContext) {
	localctx = NewArtifactTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MosDSLParserRULE_artifactType)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		_la = p.GetTokenStream().LA(1)

		if !(_la == MosDSLParserFEATURE || _la == MosDSLParserIDENT) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllBlockItem() []IBlockItemContext
	BlockItem(i int) IBlockItemContext

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(MosDSLParserLBRACE, 0)
}

func (s *BlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(MosDSLParserRBRACE, 0)
}

func (s *BlockContext) AllBlockItem() []IBlockItemContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBlockItemContext); ok {
			len++
		}
	}

	tst := make([]IBlockItemContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBlockItemContext); ok {
			tst[i] = t.(IBlockItemContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) BlockItem(i int) IBlockItemContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockItemContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockItemContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitBlock(s)
	}
}




func (p *MosDSLParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MosDSLParserRULE_block)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		p.Match(MosDSLParserLBRACE)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 67117040) != 0) {
		{
			p.SetState(60)
			p.BlockItem()
		}


		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(66)
		p.Match(MosDSLParserRBRACE)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IBlockItemContext is an interface to support dynamic dispatch.
type IBlockItemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Field() IFieldContext
	FeatureBlock() IFeatureBlockContext
	SpecBlock() ISpecBlockContext
	NestedBlock() INestedBlockContext

	// IsBlockItemContext differentiates from other interfaces.
	IsBlockItemContext()
}

type BlockItemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockItemContext() *BlockItemContext {
	var p = new(BlockItemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_blockItem
	return p
}

func InitEmptyBlockItemContext(p *BlockItemContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_blockItem
}

func (*BlockItemContext) IsBlockItemContext() {}

func NewBlockItemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockItemContext {
	var p = new(BlockItemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_blockItem

	return p
}

func (s *BlockItemContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockItemContext) Field() IFieldContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldContext)
}

func (s *BlockItemContext) FeatureBlock() IFeatureBlockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFeatureBlockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFeatureBlockContext)
}

func (s *BlockItemContext) SpecBlock() ISpecBlockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISpecBlockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISpecBlockContext)
}

func (s *BlockItemContext) NestedBlock() INestedBlockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INestedBlockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INestedBlockContext)
}

func (s *BlockItemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockItemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *BlockItemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterBlockItem(s)
	}
}

func (s *BlockItemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitBlockItem(s)
	}
}




func (p *MosDSLParser) BlockItem() (localctx IBlockItemContext) {
	localctx = NewBlockItemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MosDSLParserRULE_blockItem)
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(68)
			p.Field()
		}


	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(69)
			p.FeatureBlock()
		}


	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(70)
			p.SpecBlock()
		}


	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(71)
			p.NestedBlock()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}


errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IFieldContext is an interface to support dynamic dispatch.
type IFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Key() IKeyContext
	EQUALS() antlr.TerminalNode
	Value() IValueContext

	// IsFieldContext differentiates from other interfaces.
	IsFieldContext()
}

type FieldContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldContext() *FieldContext {
	var p = new(FieldContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_field
	return p
}

func InitEmptyFieldContext(p *FieldContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_field
}

func (*FieldContext) IsFieldContext() {}

func NewFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldContext {
	var p = new(FieldContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_field

	return p
}

func (s *FieldContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldContext) Key() IKeyContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *FieldContext) EQUALS() antlr.TerminalNode {
	return s.GetToken(MosDSLParserEQUALS, 0)
}

func (s *FieldContext) Value() IValueContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *FieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.EnterField(s)
	}
}

func (s *FieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MosDSLParserListener); ok {
		listenerT.ExitField(s)
	}
}




func (p *MosDSLParser) Field() (localctx IFieldContext) {
	localctx = NewFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, MosDSLParserRULE_field)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		p.Key()
	}
	{
		p.SetState(75)
		p.Match(MosDSLParserEQUALS)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Value()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IKeyContext is an interface to support dynamic dispatch.
type IKeyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENT() antlr.TerminalNode
	FEATURE() antlr.TerminalNode
	BACKGROUND() antlr.TerminalNode
	SCENARIO() antlr.TerminalNode
	GIVEN() antlr.TerminalNode
	WHEN() antlr.TerminalNode
	THEN() antlr.TerminalNode
	GROUP() antlr.TerminalNode
	SPEC() antlr.TerminalNode
	INCLUDE() antlr.TerminalNode

	// IsKeyContext differentiates from other interfaces.
	IsKeyContext()
}

type KeyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyKeyContext() *KeyContext {
	var p = new(KeyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_key
	return p
}

func InitEmptyKeyContext(p *KeyContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MosDSLParserRULE_key
}

func (*KeyContext) IsKeyContext() {}

func NewKeyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *KeyContext {
	var p = new(KeyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MosDSLParserRULE_key

	return p
}

func (s *KeyContext) GetParser() antlr.Parser { return s.parser }

func (s *KeyContext) IDENT() antlr.TerminalNode {
	return s.GetToken(MosDSLParserIDENT, 0)
}

func (s *KeyContext) FEATURE() antlr.TerminalNode {
	return s.GetToken(MosDSLParserFEATURE, 0)
}
